
name:                deck
version:             0.1.0.1
synopsis:            A game.
license:             MIT
license-file:        LICENSE
author:              Iavor S. Diatchki
maintainer:          iavor.diatchki@gmail.com
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable deck
  other-modules:       State, Game
                       RNG

  build-depends:       base                 >=4.8,
                       text                 >=1.2,
                       vector               >=0.10,
                       bytestring           >=0.5,
                       tf-random,
                       array                >=0.5,
                       containers           >=0.5,
                       pretty

  main-is:             Main.hs
  hs-source-dirs:      src
  ghc-options:         -threaded

  default-language:    Haskell2010
